--- a/formulario.html
+++ b/formulario.html
@@ -113,9 +113,9 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-7 text-start">
-                <label for="exampleDataList" class="form-label">Periodo do curso </label>
-                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Todos">
-                <datalist id="datalistOptions">
+                <label for="examplePeriodo" class="form-label">Periodo do curso </label>
+                <input class="form-control" list="datalistPeriodo" id="examplePeriodo" placeholder="Todos">
+                <datalist id="datalistPeriodo">
                   <option value="A distâcia">
                   <option value="Integral">
                   <option value="Matutino">
@@ -130,9 +130,9 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-7 text-start">
-                <label for="exampleDataList" class="form-label">Tipo de vagas </label>
-                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Todos">
-                <datalist id="datalistOptions">
+                <label for="exampleVagas" class="form-label">Tipo de vagas </label>
+                <input class="form-control" list="datalistVagas" id="exampleVagas" placeholder="Todos">
+                <datalist id="datalistVagas">
                   <option value="Estágio">
                   <option value="Efetivo">
                   <option value="Aprediz">
@@ -143,9 +143,9 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-7 text-start">
-                <label for="exampleDataList" class="form-label">Modalidade </label>
-                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Todos">
-                <datalist id="datalistOptions">
+                <label for="exampleModalidade" class="form-label">Modalidade </label>
+                <input class="form-control" list="datalistModalidades" id="exampleModalidade" placeholder="Todos">
+                <datalist id="datalistModalidades">
                   <option value="Presencial">
                   <option value="Homeoffice">
                   <option value="Híbrido">
@@ -156,9 +156,9 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-7 text-start">
-                <label for="exampleDataList" class="form-label">Vaga de inclusão </label>
-                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Não">
-                <datalist id="datalistOptions">
+                <label for="exampleInclusão" class="form-label">Vaga de inclusão </label>
+                <input class="form-control" list="datalistInclusão" id="exampleInclusão" placeholder="Não">
+                <datalist id="datalistInclusão">
                   <option value="Sim">
                 </datalist>          
               </div>
@@ -168,7 +168,7 @@
           <div class="row justify-content-center">
             <div class="col-7 text-start">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Valor minimo</label>
+                    <label for="exampleInputEmail1" class="form-label">Valor mínimo</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                   </div>              </div>
             <div class="col-4">
