--- a/Vaga.html
+++ b/Vaga.html
@@ -87,15 +87,16 @@
         <div class="container text-center">
             <div class="row">
               <div class="col my-auto">
-                <IMG src="Exemplo-Vaga.png" style="left: 300px; top: 160px; position: absolute" width="250" height="200">
+                <IMG src="IBM.svg" class="img-fluid" width="250" height="200">
               </div>
               <div class="col text-start">
                  
                 <div class="mb-3 ">
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
-                    <p class="fs-2 text-start" style="color: black;">Nome da Empresa</p>
-                    <p class="fs-3 text-break text-start" style="color: rgb(50, 50, 60);">Descrição da vaga.</p>
+                    <p class="fs-2 text-start" style="color: black;">IBM</p>
+                    <p class="fs-8 text-break text-start" style="color: rgb(50, 50, 60);">A IBM é uma empresa 
+                      multinacional americana de tecnologia que atua em diversas áreas, como hardware, software, serviços de infraestrutura e consultoria. Fundada em 1911, a companhia tem como foco principal a inovação e o desenvolvimento de soluções tecnológicas que possam fazer a diferença na vida das pessoas e das empresas em todo o mundo. </p>
                     
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Portfólio</label>
